🐛fix(Home): gap between cards in mobile devices

--- a/src/layouts/Home/Home.module.css
+++ b/src/layouts/Home/Home.module.css
@@ -10,6 +10,11 @@
 .cards {
   display: flex;
   flex-wrap: wrap;
+
+  @media (--mediaMobile) {
+    justify-content: center;
+    gap: var(--spaceXL);
+  }
 }
 
 .overview {
